fix alignment in header

--- a/source/assets/stylesheets/styles.css.scss
+++ b/source/assets/stylesheets/styles.css.scss
@@ -563,11 +563,13 @@ ul {
 .cont {
   @media screen and (max-width: 979px) {
     float: none;
-    text-align: center;
     padding: 10px;
     margin-top: 30px;
     display: block;
     color: #fff;
+  }
+  @media screen and (max-width: 640px) {
+    text-align: center;
   }
 }
 
@@ -624,7 +626,7 @@ footer {
 
 @media screen and (max-width: 979px) {
   body > .container {
-    margin-top: 210px;
+    margin-top: 224px;
   }
   .carousel {
     display: none;
